welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:6: error: ')' expected but '}' found.
}
^Poucet:9: error: 'while' expected but '}' found.
	}
        ^